[gd_scene load_steps=5 format=3 uid="uid://bkjo27tus16cr"]

[ext_resource type="Script" uid="uid://ci23ngthgce8j" path="res://World/world.gd" id="1_2dftf"]
[ext_resource type="PackedScene" uid="uid://wddjhpik28bm" path="res://Environment/environment.tscn" id="2_il6x7"]
[ext_resource type="PackedScene" uid="uid://co5uy51mo4xql" path="res://Gantt/gantt.tscn" id="6_04mge"]
[ext_resource type="PackedScene" uid="uid://geysmsrle8io" path="res://SimulationControls/simulation_controls.tscn" id="6_eue43"]

[node name="World" type="Node2D" node_paths=PackedStringArray("enemy_instance")]
script = ExtResource("1_2dftf")
enemy_instance = NodePath("")

[node name="TabContainer" type="TabContainer" parent="."]
offset_left = -3.0
offset_right = 1150.0
offset_bottom = 642.0
current_tab = 2
all_tabs_in_front = true

[node name="Environment" parent="TabContainer" instance=ExtResource("2_il6x7")]
layout_mode = 2

[node name="Configuration" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Data" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 2

[node name="GanttNew" parent="TabContainer/Data" groups=["gantt"] instance=ExtResource("6_04mge")]
offset_left = 9.0
offset_top = 3.0
offset_right = 1153.0
offset_bottom = 611.0

[node name="SimulationControls" parent="." instance=ExtResource("6_eue43")]
offset_left = 7.0
offset_top = 152.0
offset_right = 788.0
offset_bottom = 266.0

[connection signal="sim_speed_changed" from="SimulationControls" to="." method="_on_simulation_controls_sim_speed_changed"]
